RUMM-3256: Make tests run